✨ new(alertbanner): alert banner alignment issue fix.

--- a/packages/assets/css/src/scss/_components/_alert-banner/_elements/_alert-banner-container.scss
+++ b/packages/assets/css/src/scss/_components/_alert-banner/_elements/_alert-banner-container.scss
@@ -8,20 +8,19 @@
 ///
 /// @param {String} $block - Main block name
 @mixin build-container($block) {
-    // DIR: Left to right.
-    // THEME: None.
-    @include sui-class($rtl: false, $theme: null) {
-        @include block($block) {
-            background-color: $color-extended-warning-70;
-            align-items: flex-start;
-            display: flex;
-            gap: $spacing-md;
-            padding: $spacing-lg;
+	// DIR: Left to right.
+	// THEME: None.
+	@include sui-class($rtl: false, $theme: null) {
+		@include block($block) {
+			background-color: $color-extended-warning-70;
+			align-items: flex-start;
+			display: flex;
+			gap: $spacing-md;
+			padding: $spacing-lg;
 
-            @include media(min-width, sm) {
-                align-items: center;
-                padding: $spacing-md $spacing-xxl;
-            }
-        }
-    }
+			@include media(min-width, sm) {
+				padding: $spacing-md $spacing-xxl;
+			}
+		}
+	}
 }
